# vibe_coding

./: .gitignore  CLAUDE.md  Dockerfile  README.md  complexipy.toml  fabfile.py  lint-imports.toml  pyproject.toml  ruff.toml  ty.toml
clickhouse/config.d/: clusters.xml  macros.xml
docs/architecture/: REPOSITORY.md
docs/conventions/: ERRORS.md  LOGGING.md  PAGINATION.md
docs/databases/: CLICKHOUSE.md  MIGRATIONS.md  POSTGRES.md
src/: manage.py
src/alembic/postgres/versions/: 2026_03_23_1117-1b319f3d490d_auto_generated_migration.py
src/app/auth_context/applications/: auth.py  email_notification.py  user.py
src/app/auth_context/domains/constants/: token.py
src/app/auth_context/domains/dto/: auth.py
src/app/auth_context/domains/entities/: user.py
src/app/auth_context/domains/errors/: auth.py
src/app/auth_context/domains/value_objects/: token.py
src/app/auth_context/infrastructure/: urls.py
src/app/auth_context/infrastructure/models/: __init__.py  user.py
src/app/auth_context/infrastructure/repositories/: user.py
src/app/auth_context/services/: jwt_token.py  password_hasher.py
src/config/: init_dot_env  settings.py  urls.py
src/config/databases/services/: sql.py
src/config/entrypoints/: apscheduler.py  dramatiq.py  fastapi.py
src/config/logging/: configure.py  log_properties.py
src/config/logging/handlers/sentry/: config.py
src/share/dramatiq/: facade.py
src/share/dramatiq/actor_middlewares/: __init__.py  base.py  db_connection_closer.py  log_properties_manager.py  sentry_tags.py  task_logging.py
src/share/dramatiq/decorators/: __init__.py
src/share/fastapi/dependencies/: auth.py
src/share/fastapi/middlewares/: __init__.py  db_connections_closer.py  log_properties_manager.py  request_response_logging.py  sentry_tags.py
src/share/fastapi/utils/: body_formatter.py  url_mask_resolver.py
src/share/kafka/: consumer.py  consumer_maker.py
src/share/pagination/: __init__.py  query_params.py  response.py
src/share/sqlmodel/: filter_set.py
src/share/sqlmodel/models/: base.py
(+10 files in other folders)
